bk_ida/gccida/c1/alloc_block
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:690:12: error: expected expression
*( _OWORD *)&result->aux = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:690:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->aux = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:691:12: error: expected expression
*( _OWORD *)&result->global_live_at_start = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:691:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->global_live_at_start = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:692:12: error: expected expression
*( _OWORD *)&result->local_set = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:692:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->local_set = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:693:12: error: expected expression
*( _OWORD *)&result->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:693:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:694:12: error: expected expression
*( _OWORD *)&result->head_tree = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:694:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->head_tree = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:695:12: error: expected expression
*( _OWORD *)&result->head = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:695:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->head = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:696:12: error: expected expression
*( _OWORD *)&result->count = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/cfg.c:696:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->count = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_block/src/obj/cfg.o] Error 1
